--- a/story.html
+++ b/story.html
@@ -17,7 +17,9 @@
       <h1>故事</h1>
       <!-- <img src="story.jpg" class="image1"> -->
       <p>劇情故事（Lore）是指《空洞騎士》的世界觀設定中發生的背景故事和遊戲劇情。通過整合角色對話、過場動畫、石碑文字、圖像記載、獵人日誌的條目等內容，可以還原出聖巢王國的背景故事原貌。雖然這些內容包含一些模糊的描述，不過從中推得的信息基本能夠支持玩家拼湊出整個背景故事。可以說，只要完全掌握所有信息來源並全盤考察，玩家一般都能夠憑自己的努力大致理解全部的故事話題。</p>
-<button   onclick = "goToLink('file:./DOCTYPE.html')">返回 </button>
+      <button   onclick = "goToLink('file:./DOCTYPE.html')">返回 </button>
+      <button id="leftButton">&#8249;</button>
+      <button id="rightButton">&#8250;</button>
     </div>
   </body>
 </html>
