--- a/主角.html
+++ b/主角.html
@@ -17,12 +17,12 @@
     <div class="left-box">
       <h1>主角</h1>
       <img src="https://static.wikia.nocookie.net/hollowknight/images/3/34/Image.png/revision/latest?cb=20190404013240&path-prefix=zh" class="image1">
-      <p style=" text-align:left">小騎士是一個被拋棄的容器。
-                                  它是蒼白之王與白色夫人結合
-                                  的產物之一，誕生於深淵，外
-                                  殼內部盛有虛空。大黃蜂與小
-                                  騎士同父異母，是它的雌性同
-                                  胞。小騎士與其他容器同胞一
+      <p style=" text-align:left">小騎士是一個被拋棄的容器。<br>
+                                  它是蒼白之王與白色夫人結合<br>
+                                  的產物之一，誕生於深淵，外<br>
+                                  殼內部盛有虛空。大黃蜂與小<br>
+                                  騎士同父異母，是它的雌性同<br>
+                                  胞。小騎士與其他容器同胞一<br>
                                   樣沒有性別</p>
     </div>
     <div class="center-box">
@@ -31,7 +31,7 @@
       <hr>
       <img src="https://static.wikia.nocookie.net/hollowknight/images/6/65/Nail_1_Old_Nail.png/revision/latest?cb=20190404091306&path-prefix=zh" class="image2">
       <img src="https://static.wikia.nocookie.net/hollowknight/images/5/56/Charms_prompt.png/revision/latest/scale-to-width-down/220?cb=20190404092142&path-prefix=zh" class="image3">
-      <p style="font-size: 20px;position: absolute;top:120px;left:150px; text-align:left">
+      <p style="font-size: 2vh;position: absolute;top: 9vh;left:8vw; text-align:left">
         通過冒險獲得或從其他蟲子那裡購<br>
         買到的特殊物品，可通過可用的凹<br>
         槽來裝備它們。護符會因不同的使<br>
@@ -39,7 +39,7 @@
         括增加持有者的生命值，提升靈魂<br>
         聚集速度和產生幼崽來保護其持有<br>
         者等更多不同的功能。</p>
-      <p style="font-size: 20px;position: absolute;top:120px;left:650px; text-align:left">
+      <p style="font-size: 2vh;position: absolute;top:9vh;left:38vw; text-align:left">
         通過冒險獲得或從其他蟲子那裡購<br>
         買到的特殊物品，可通過可用的護<br>
         符槽來裝備它們。護符能給主角帶<br>
@@ -55,14 +55,14 @@
       <hr>
       <img src="https://static.wikia.nocookie.net/hollowknight/images/7/78/Vengeful_Spirit.png/revision/latest/scale-to-width-down/220?cb=20190404092712&path-prefix=zh" class="image4">
       <img src="https://static.wikia.nocookie.net/hollowknight/images/6/6f/Skill_Mantis_Claw.png/revision/latest?cb=20190404092921&path-prefix=zh" class="image5">
-      <p style="font-size: 20px;position: absolute;top:120px;left:150px; text-align:left">
+      <p style="font-size: 2vh;position: absolute;top: 9vh;left:8vw; text-align:left">
         可以從蝸牛薩滿那獲得第一個法術<br>
         ，這些魔法攻擊會在短時間內爆發<br>
         出強大的傷害，代價則是會使用小<br>
         騎士所收集的靈魂。每個法術都可<br>
         以通過找到廢墟內的隱藏房間從而<br>
         被賦予更加強大的形態。</p>
-      <p style="font-size: 20px;position: absolute;top:120px;left:650px; text-align:left">
+        <p style="font-size: 2vh;position: absolute;top:9vh;left:38vw; text-align:left">
         在廢墟內找到的技能及器具可以使<br>
         小騎士更加有效地與敵人交戰或穿<br>
         越各種困難複雜的地形，其中技能<br>
