--- a/團隊介紹.html
+++ b/團隊介紹.html
@@ -7,6 +7,14 @@
       function goToLink(url) {
           window.location.href = url;
       }
+      let popup = document.getElementById("popup");
+
+      function openPopup(){
+        popup.classList.add("open-popup");
+      }
+      function closePopup(){
+        popup.classList.remove("open-popup");
+      }
       </script>
     <link rel ="stylesheet" type= "text/css" href = "團隊介紹.css" >
    
@@ -18,10 +26,15 @@
       <form>
         <label for="feedback">請輸入您的意見或建議:</label><br>
         <textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br>
-        <button class="button2" onclick = "goToLink('file:./團隊介紹.html')">提交</button>
+        <button class="button2" onclick = "openPopup()">提交</button>
       </form>
-      <p style="font-size: 30px; position: absolute; top: 68%; left: 0; bottom: 0; right: 0;" >捐款:郵局(700)03110042334274<br>gmail:gmjutrjghj4174786@gmail.com</p>
-<button class="button1"   onclick = "goToLink('file:./DOCTYPE.html')">返回 </button>
+      <!-- 這裡當按下提交時會跳出得畫面 -->
+      <div class = "popup" id ="popup">
+        <h2 style="font-size: 5vh;">謝謝你的反饋</h2>
+        <p style="font-size: 4vh;">你成功反饋傻逼!!!!</p>
+        <button class="button3" onclick=" closePopup()">nigga!!!</button>
+      </div>
+        <button class="button1"   onclick = "goToLink('file:./DOCTYPE.html')">返回 </button>
     </div>
   </body>
 </html>
