--- a/團隊介紹.html
+++ b/團隊介紹.html
@@ -11,6 +11,8 @@
     </script>
     
   </head>
+
+
   <body> 
     <img src="https://truth.bahamut.com.tw/s01/201809/66f1a53336184863b738f176d16ad975.JPG" alt="My Image">
     <div class="center-box">
@@ -18,7 +20,7 @@
       <form>
         <label for="feedback">請輸入您的意見或建議:</label><br>
         <textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br>
-        <button class="button2" onclick = "openPopup()">提交</button>
+        <button type ="submit" class="button2" onclick = "openPopup()">提交</button>
       </form>
       <!-- 這裡當按下提交時會跳出得畫面 -->
       <div class = "popup" id ="popup">
