--- a/DOCTYPE.html
+++ b/DOCTYPE.html
@@ -21,7 +21,7 @@
         <li ><button onclick = "goToLink('file:./主角.html')">主角</button></li>
         <li ><button onclick = "goToLink('file:./NPC.html')">NPC</button></li>
         <li ><button onclick = "goToLink('file:./團隊介紹.html')">回饋</button></li>
-        <!-- <li ><button onclick = "goToLink('file:./影片.html')">影片</button></li> -->
+        <li ><button onclick = "goToLink('file:./影片.html')">影片</button></li>
         
       </ul>
      
