--- a/團隊介紹.html
+++ b/團隊介紹.html
@@ -20,13 +20,14 @@
       <form>
         <label for="feedback">請輸入您的意見或建議:</label><br>
         <textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br>
-        <button type ="submit" class="button2" onclick = "openPopup()">提交</button>
+        
       </form>
+      <button  type = "submit" class = "button2" onclick = "openPopup()">提交</button>
       <!-- 這裡當按下提交時會跳出得畫面 -->
       <div class = "popup" id ="popup">
         <h2 style="font-size: 5vh;">謝謝你的反饋</h2>
         <p style="font-size: 4vh;">你成功反饋傻逼!!!!</p>
-        <button type ="submit" class= "button3" onclick=" closePopup()">nigga!!!</button>
+        <button type ="button"  onclick="goToLink('file:./團隊介紹.html')">nigga!!!</button>
       </div>
         <button class="button1"   onclick = "goToLink('file:./DOCTYPE.html')">返回 </button>
     </div>
