--- a/影片.html
+++ b/影片.html
@@ -1,74 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Testimonial</title>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width , initial-scale = 1.0">
+    <title>my first website</title>
+    <link rel ="stylesheet" type= "text/css" href = "影片.css" >
+    <script>
+      function goToLink(url) {
+          window.location.href = url;
+      }
+    </script>
+  
+  </head>
 
-    <link rel="stylesheet" href="style.css">
-
-</head>
 <body>
-
-    <div class="container">
-        <div class="wrapper">
-            <div class="card">
-                <div class="card-thumb">
-                    <img src="img/img-1.jpeg" class="client-img" alt="">
-                    <span class="client-name">client one</span>
-                </div>
-                <div class="card-body">
-                    <p class="review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, nam. Fugiat, ut provident. Nulla quibusdam labore ea est consequatur sequi fuga iusto laudantium, earum doloremque?</p>
-                    <div class="rating">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-no-fill.png" class="star" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-thumb">
-                    <img src="img/img-2.jpeg" class="client-img" alt="">
-                    <span class="client-name">client two</span>
-                </div>
-                <div class="card-body">
-                    <p class="review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, nam. Fugiat, ut provident. Nulla quibusdam labore ea est consequatur sequi fuga iusto laudantium, earum doloremque?</p>
-                    <div class="rating">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-no-fill.png" class="star" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-thumb">
-                    <img src="img/img-3.jpeg" class="client-img" alt="">
-                    <span class="client-name">client three</span>
-                </div>
-                <div class="card-body">
-                    <p class="review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, nam. Fugiat, ut provident. Nulla quibusdam labore ea est consequatur sequi fuga iusto laudantium, earum doloremque?</p>
-                    <div class="rating">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-fill.png" class="star" alt="">
-                        <img src="img/star-no-fill.png" class="star" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="indicators">
-            <button class="active"></button>
-            <button></button>
-            <button></button>
-        </div>
-    </div>
-
-    <script src="app.js"></script>
-
+<img src="https://truth.bahamut.com.tw/s01/201809/66f1a53336184863b738f176d16ad975.JPG" alt="My Image">
+<div class="center-box">
+<div class="testimonial-slider">
+  <ul class="slider">
+    <!-- 第一個圖片和介紹 -->
+    <li>
+      <img style =
+      "width: 16vw;
+      height: auto;   
+      position: absolute;
+      top: 10%;
+      left: 20%;" src="https://static.wikia.nocookie.net/hollowknight/images/9/9f/Jiji_Circle.png/revision/latest?cb=20190404213620&path-prefix=zh" >
+      <q style="  position: absolute;
+      top: 320px;
+      left: 48%;
+      transform: translate(-50%, -50%);
+      font-size: 3vw">懺悔師</q>
+    </li>
+    <li>
+      <div class="testimonial-slider-content">
+        <q>懺悔吧!把人生的罪孽都洗乾淨!!!</q>
+        <p class="source">- 賴冠霖</p>
+      </div>
+    </li>
+    <!-- 第二個圖片和介紹 -->
+    <li>
+      <img style =
+      "width: 16vw;
+      height: auto;   
+      position: absolute;
+      top: 10%;
+      left: 20%;" src="https://static.wikia.nocookie.net/hollowknight/images/b/bb/Iselda_Circle.png/revision/latest?cb=20190404214229&path-prefix=zh" >
+      <q style="  position: absolute;
+      top: 320px;
+      left: 48%;
+      transform: translate(-50%, -50%);
+      font-size: 2vw">伊塞爾達</q>
+    </li>
+    <li>
+      <div class="testimonial-slider-content">
+        <q>這世界是很美好的!雖然會時常遇到各種亂七八糟的事情</q>
+        <p class="source">- 來自某個路人</p>
+      </div>
+    </li>
+  </ul>
+  </div>
+  <button class="button1"   onclick = "goToLink('file:./DOCTYPE.html')">返回 </button>
+</div>
 </body>
-</html>
